test/libsolidity/syntaxTests/literals/invalid_bin_number_start.sol
contract C {
    uint x = 0b20;
}
// ----
// ParserError 8936: (26-28): Binary digit missing or invalid.
